--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <input type="button" value="{{.Name}}windows打包下载" onclick="resetWin({{.UrlName}})" style="font-size: 20px;padding: 12px 26px;margin: 32px 16px;" />
     <input type="button" value="{{.Name}}安卓版本下载" onclick="getApk({{.UrlName}})" style="font-size: 20px;padding: 12px 26px;margin: 32px 16px;"/>
     <input type="button" value="{{.Name}}windows版本下载" onclick="getWin({{.UrlName}})" style="font-size: 20px;padding: 12px 26px;margin: 32px 16px;"/>
+   <input type="button" value="{{.Name}}活动专用" onclick="resetHuoDong({{.UrlName}})" style="font-size: 20px;padding: 12px 26px;margin: 32px 16px;"/>
      <!--form action="/download_apk">
 	    <input type="submit" value="下载apk文件" />
      </!--form>
